--- a/was/src/main/resources/application.yml
+++ b/was/src/main/resources/application.yml
@@ -13,12 +13,23 @@ spring:
         format_sql: true
     hibernate:
       ddl-auto: update #create validate update
+  servlet:
+    multipart:
+      enabled: true
+      file-size-threshold: 2KB
+      max-file-size: 10MB
+      max-request-size: 200MB
+
 
 server:
-  port: 443
+  port: 80
 
 app:
   home-dir: ${user.dir}
   log-dir: ${app.home-dir}/log
   log-file-name: was
-  upload-path: D:\StudyPath\upload
+  upload-path: D:\StudyPath\upload\
+
+#logging:
+#  level:
+#    root: trace
