--- a/was/src/main/resources/application-release.yml
+++ b/was/src/main/resources/application-release.yml
@@ -1,2 +1,10 @@
 app:
   upload-path: /home/was/upload/
+#  corsIpPort: http://210.103.44.180:80
+
+spring:
+  datasource:
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://172.30.1.87:15432/move_poster
+    username: move_poster
+    password: mp1234!
